fix: Image not 100% width on mobile

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -701,6 +701,11 @@ footer {
   border-bottom: 1px solid var(--color-gray-90);
 }
 
+.post > figure {
+  margin-left: 0;
+  margin-right: 0;
+}
+
 .post > figure:has(img) {
   text-align: center;
 }
